Some animation code, Google web font implementation

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft</title>
-    <!-- Link to main CSS stylesheet-->
+    <!-- Google fonts stuff-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- Main CSS stylesheet-->
     <link rel="stylesheet" href="./mainstyle.css">
     <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <nav>
@@ -25,11 +30,15 @@
         </ul>
     </nav>
 
+    <!-- The actual "writers defintion" of an body, or what goes into a "body" of an essay -->
     <div class="body-body">
         <h1>Welcome to Minecraft</h1>
-        <h2>With new games, new updates, and new ways to play,
+        <h3>With new games, new updates, and new ways to play,
         join one of the biggest communities in gaming,
-        and start crafting today!</h2>
+        and start crafting today!</h3>
+        <!-- Animation -->
+        <div class="animation">
+        </div>
     </div>
     
     <footer>
