--- a/community.html
+++ b/community.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft</title>
+    <!-- Google fonts stuff-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Link to main CSS stylesheet-->
     <link rel="stylesheet" href="./mainstyle.css">
     <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav>
@@ -31,7 +35,7 @@
         <p> This doesn't nearly represent <em>all</em> of the Minecraft playerbase,
         but you can find many willing friends here!
             <ol>
-                <li></li><a href="https://gab.com/g/minecraft">g/Minecraft</a></li>
+                <li></li><a href="https://gab.com/g/minecraft">g/minecraft</a></li>
             </ol>
         </p>
         
