--- a/game.html
+++ b/game.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minecraft</title>
+    <!-- Google fonts stuff-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Link to main CSS stylesheet-->
     <link rel="stylesheet" href="./mainstyle.css">
     <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav>
@@ -26,7 +30,7 @@
     </nav>
 
     <div class="body-body">
-        <h1>What is <em>Minecraft</em>?</h1>
+        <h1>What is "Minecraft"?</h1>
         <p> Minecraft is a 2011 sandbox video game originally created by Swedish programmer Markus "Notch" Persson and later developed and published by Mojang.
             The creative and building aspects of Minecraft enable players to build constructions out of textured cubes in a 3D procedurally generated world.
         </p>
