--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <ul class="navbar">
-            <li><a class="active" href="#home"><img src="logo.png" alt="Minecraft logo"></a></li>
+            <li><a class="active" href="#home"><img src="logo.svg" alt="Minecraft logo"></a></li>
             <li><a href="index.html">Home</a></li>
             <li><a href="game.html">Game</a></li>
             <li><a href="community.html">Community</a></li>
