--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Minecraft</title>
+    <!-- Bootstrap CDN CSS Stuff -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Google fonts stuff-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,33 +18,68 @@
 
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li><a class="active" href="#home"><img src="logo.svg" alt="Minecraft logo"></a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="game.html">Game</a></li>
-            <li><a href="community.html">Community</a></li>
-            <li><a href="store.html">Store<i class="fa fa-fw fa-shopping-cart"></i></a></li>
-            <li><input type="text" placeholder="ALFRED?"></li>
-            <button type="submit"><i class="fa fa-search"></i></button>
-            <li id="rightFloat"><a href="#about">[Register]</a></li>
-            <li id="rightFloat"><a href="#about">Log in</a></li>
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #181818;">
+      <a class="navbar-brand" href="#"><img class=logo src="logo.svg" alt="Minecraft logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="game.html">Game</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                More
+              </a>
+              <!-- Bootstrap Header (with title!) -->
+              <div class="dropdown-menu">
+                  <h6 class="dropdown-header">EPIC MENU</h6>
+                  <a class="dropdown-item" href="community.html">Community</a>
+                  <a class="dropdown-item" href="#">Another EPIC action</a>
+              </div>
+          </li>
         </ul>
-    </nav>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+  </nav>
 
     <!-- The actual "writers defintion" of an body, or what goes into a "body" of an essay -->
     <div class="body-body">
-        <h1>Welcome to Minecraft</h1>
-        <h3>With new games, new updates, and new ways to play,
-        join one of the biggest communities in gaming,
-        and start crafting today!</h3>
-        <!-- Animation -->
-        <div class="animation">
+        <!-- Bootstrap Grid -->
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <h1>Welcome to Minecraft</h1>
+          </div>
+          <div class="col-sm">
+          <h3>With new games, new updates, and new ways to play, 
+            join one of the biggest communities in gaming,
+            and start crafting today!</h3>
+          </div>
+          <div class="col-sm">
+            <!-- Animation -->
+          </div>
+          <div class="animation"></div>
         </div>
+      </div>
     </div>
-    
-    <footer>
-        <p>Local gamer girls in your area!</p>
-    </footer>
+
+    <!-- Bootstrap Footer -->
+    <nav class="navbar fixed-bottom navbar-dark" style="background-color: #181818;">
+      <a class="navbar-brand" href="#">Mighty fine block you got there, Son!</a>
+    </nav>
+
+    <!-- Bootstap CDN JavaScript stuff -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
